five-vm-mito/test_errors.txt
warning: unused import: `lazy_validation::LazyAccountValidator`
 --> five-vm-mito/src/context.rs:8:5
  |
8 |     lazy_validation::LazyAccountValidator,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `heapless::String as HString`
  --> five-vm-mito/src/execution.rs:23:5
   |
23 | use heapless::String as HString;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/accounts.rs:10:28
   |
10 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused imports: `Result` and `VMError`
  --> five-vm-mito/src/handlers/arithmetic.rs:47:28
   |
47 | ...t, Result, VMError, V...
   |       ^^^^^^  ^^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/constraints.rs:11:28
   |
11 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/control_flow.rs:10:28
   |
10 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused import: `Result`
 --> five-vm-mito/src/handlers/logical.rs:9:28
  |
9 | ...ult, Result, VMEr...
  |         ^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/memory.rs:10:28
   |
10 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/stack_ops.rs:11:28
   |
11 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/arrays.rs:36:28
   |
36 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused import: `Result`
 --> five-vm-mito/src/handlers/functions.rs:8:28
  |
8 | ...ult, Result, VMEr...
  |         ^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/locals.rs:10:28
   |
10 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused import: `Result`
 --> five-vm-mito/src/handlers/option_result.rs:9:28
  |
9 | ...ult, Result, VMEr...
  |         ^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/registers.rs:10:28
   |
10 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/syscalls.rs:31:28
   |
31 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/system/init.rs:12:28
   |
12 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/system/invoke.rs:10:28
   |
10 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused import: `Result`
 --> five-vm-mito/src/handlers/system/native.rs:9:28
  |
9 | ...ult, Result, VMEr...
  |         ^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/system/pda.rs:10:28
   |
10 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused import: `Result`
  --> five-vm-mito/src/handlers/system/sysvars.rs:13:28
   |
13 | ...ult, Result, VME...
   |         ^^^^^^

warning: unused import: `Result`
 --> five-vm-mito/src/utils.rs:6:35
  |
6 | ...ult, Result, VMEr...
  |         ^^^^^^

warning: unused variable: `e`
   --> five-vm-mito/src/handlers/system/invoke.rs:174:85
    |
174 | ...err(|e| {
    |         ^ help: if this is intentional, prefix it with an underscore: `_e`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `e`
   --> five-vm-mito/src/handlers/system/pda.rs:145:21
    |
145 | ... Err(e) => {
    |         ^ help: if this is intentional, prefix it with an underscore: `_e`

warning: `five-vm-mito` (lib) generated 23 warnings (run `cargo fix --lib -p five-vm-mito` to apply 21 suggestions)
   Compiling five-vm-mito v0.1.0 (/Users/amberjackson/Documents/Development/five-org/five-vm-mito)
five-vm-mito/src/context.rs:1229:25: error[E0425]: cannot find value `payer` in this scope: not found in this scope
five-vm-mito/src/context.rs:1230:28: error[E0425]: cannot find value `payer` in this scope: not found in this scope
five-vm-mito/src/context.rs:1231:30: error[E0425]: cannot find value `payer` in this scope: not found in this scope
five-vm-mito/src/context.rs:1264:25: error[E0425]: cannot find value `payer` in this scope: not found in this scope
five-vm-mito/src/context.rs:1265:28: error[E0425]: cannot find value `payer` in this scope: not found in this scope
five-vm-mito/src/context.rs:1266:30: error[E0425]: cannot find value `payer` in this scope: not found in this scope
five-vm-mito/src/context.rs:8:5: warning: unused import: `lazy_validation::LazyAccountValidator`
five-vm-mito/src/execution.rs:23:5: warning: unused import: `heapless::String as HString`
five-vm-mito/src/handlers/accounts.rs:10:28: warning: unused import: `Result`
five-vm-mito/src/handlers/arithmetic.rs:47:28: warning: unused imports: `Result` and `VMError`
five-vm-mito/src/handlers/constraints.rs:11:28: warning: unused import: `Result`
five-vm-mito/src/handlers/control_flow.rs:10:28: warning: unused import: `Result`
five-vm-mito/src/handlers/logical.rs:9:28: warning: unused import: `Result`
five-vm-mito/src/handlers/memory.rs:10:28: warning: unused import: `Result`
five-vm-mito/src/handlers/stack_ops.rs:11:28: warning: unused import: `Result`
five-vm-mito/src/handlers/arrays.rs:36:28: warning: unused import: `Result`
five-vm-mito/src/handlers/functions.rs:8:28: warning: unused import: `Result`
five-vm-mito/src/handlers/locals.rs:10:28: warning: unused import: `Result`
five-vm-mito/src/handlers/option_result.rs:9:28: warning: unused import: `Result`
five-vm-mito/src/handlers/registers.rs:10:28: warning: unused import: `Result`
five-vm-mito/src/handlers/syscalls.rs:31:28: warning: unused import: `Result`
five-vm-mito/src/handlers/system/init.rs:12:28: warning: unused import: `Result`
five-vm-mito/src/handlers/system/invoke.rs:10:28: warning: unused import: `Result`
five-vm-mito/src/handlers/system/native.rs:9:28: warning: unused import: `Result`
five-vm-mito/src/handlers/system/pda.rs:10:28: warning: unused import: `Result`
five-vm-mito/src/handlers/system/sysvars.rs:13:28: warning: unused import: `Result`
five-vm-mito/src/utils.rs:6:35: warning: unused import: `Result`
five-vm-mito/src/macros.rs:79:29: error[E0308]: mismatched types: expected `VMError`, found `VMErrorCode`
five-vm-mito/src/macros.rs:56:29: error[E0308]: mismatched types: expected `VMError`, found `VMErrorCode`
five-vm-mito/src/macros.rs:45:29: error[E0308]: mismatched types: expected `VMError`, found `VMErrorCode`
five-vm-mito/src/macros.rs:31:32: error[E0308]: mismatched types: expected `VMError`, found `VMErrorCode`
five-vm-mito/src/macros.rs:34:29: error[E0308]: mismatched types: expected `VMError`, found `VMErrorCode`
five-vm-mito/src/test_polymorphic_arithmetic.rs:239:13: error[E0308]: mismatched types: expected `VMError`, found `VMErrorCode`
five-vm-mito/src/handlers/system/invoke.rs:174:85: warning: unused variable: `e`: help: if this is intentional, prefix it with an underscore: `_e`
five-vm-mito/src/handlers/system/pda.rs:145:21: warning: unused variable: `e`: help: if this is intentional, prefix it with an underscore: `_e`
warning: `five-vm-mito` (lib test) generated 23 warnings
error: could not compile `five-vm-mito` (lib test) due to 22 previous errors; 23 warnings emitted
